--- a/package.json
+++ b/package.json
@@ -57,5 +57,6 @@
   "main": "postcss.config.js",
   "author": "",
   "license": "ISC",
-  "keywords": []
+  "keywords": [],
+  "homepage": "https://shawn0604.github.io/repo"
 }
