--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "homepage": "https://shawn0604.github.io/repo"
+  "homepage": "https://shawn0604.github.io/MoodBlog-frontend/"
 }
